# gutenberg-quote-generator

./: .gitignore  README.md  quote.txt
QuoteUploader/: .gitignore  Database.cs  Program.cs  Quote.cs  QuoteList.cs  QuoteUploader.csproj
QuoteUploader/QuoteText/: quote.txt
quote_creator/: Cargo.toml
quote_creator/src/: creator.rs  gutendex.rs  main.rs
