[package]
name = "data-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = { version = "1.7.1" }
tokio = { version = "1.26.0", features = ["full", "io-std"]  }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
futures = "0.3.27"
lazy_static = "1.4.0"
